--- a/alvahjelp_chatbot.html
+++ b/alvahjelp_chatbot.html
@@ -139,6 +139,22 @@
                 border-radius: 10px;
             }
 
+            .user-input-container {
+                flex-direction: column; /* Stack input and button vertically */
+                align-items: center;
+            }
+
+            #user-input {
+                width: 100%; /* Make the input take full width */
+                margin-top: 10px;
+            }
+
+            #send-message-button {
+                width: 100%; /* Make the button take full width */
+                margin-top: 10px;
+                margin-left: 0; /* Remove margin-left to center the button */
+            }
+
         }
 
         .chatbot-opened {
@@ -415,3 +431,4 @@
         }
     </script>
 </body>
+</html>
