--- a/alvahjelp_chatbot.html
+++ b/alvahjelp_chatbot.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         .quick-message-button {
             display: block;
