--- a/alvahjelp_chatbot.html
+++ b/alvahjelp_chatbot.html
@@ -4,6 +4,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        :root {
+            --buttonColor: #2DCB6E
+        }
+
         .quick-message-button {
             display: inline-block;
             margin: 5px 10px;
@@ -18,7 +22,38 @@
         }
 
         .quick-message-button:hover {
-            background-color: #0056b3;
+            background-color: #d3d0d0;
+        }
+
+        #top-container {
+            display: flex;
+            flex-direction: column;
+            height: 70px;
+            padding: 0 18px 20px 18px;
+            display: flex;
+            margin-bottom: 10px;
+        }
+
+        #header {
+            padding: 5px;
+            box-shadow: 0 1px 4px rgba(0,0,0,.07);
+        }
+
+        #bot-name {
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        #availability-status {
+            background-color: #1CF543;
+            font-weight: bold;
+            color: #fff;
+            border-radius: 14px;
+            width: 100px; /* Adjust the width as needed */
+            height: 30px; /* Adjust the height as needed */
+            text-align: center;
+            font-size: 14px;
+            line-height: 30px; /* Should be the same as height for vertical centering */
         }
 
         #quick-messages {
@@ -48,16 +83,8 @@
             background: #555
         }
 
-        #online-status {
-            display: inline-block;
-            background-color: #4CAF50;
-            color: #fff;
-            padding: 5px 5px;
-            border-radius: 10px;
-        }
-
         #send-message-button {
-            background-color: #007bff;
+            background-color: var(--buttonColor);
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -68,48 +95,59 @@
             margin-left: 10px;
         }
 
-        .user-input-container {
+        #user-input-container {
             display: flex;
-            align-items: center;
             justify-content: space-between;
+            padding: 10px;
         }
 
         #chatbot-container {
+            display: flex;
+            flex-direction: column; /* Set the flex direction to column */
             position: fixed;
-            bottom: 60px;
-            right: 20px;
-            width: 350px;
-            padding: 20px;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 0;
             display: none;
             font-family: 'Poppins', sans-serif;
+            z-index: 9999;
         }
 
         .message {
-            padding: 15px;
+            padding: 10px; /* Reduce padding for more compact bubbles */
             border-radius: 15px;
             font-size: 16px;
-            margin: 10px 0;
+            margin: 15px;
+            max-width: 70%; /* Adjust the max-width as needed */
+        }
+
+        .message-timestamp {
+            font-size: 12px;
+            color: #777;
         }
 
         .user-message {
-            background-color: #007bff;
+            background-color: var(--buttonColor);
             color: #fff;
-            text-align: right;
-        }
-
-        #chatbot-messages {
-            display: block;
-            max-height: 300px;
-            overflow-y: auto;
+            text-align: center;
+            margin-left: auto;
         }
 
         .chatbot-message {
             background-color: #e5e5e5;
             color: #333;
-            text-align: left;
+            text-align: center;
+            margin-right: auto;
+        }
+
+        #chatbot-messages {
+            flex: 1;
+            overflow-y: auto;
+            max-height: 70vh;
+            padding: 10px;
         }
 
         #start-chat-button {
@@ -126,7 +164,6 @@
             flex: 1;
             padding: 10px;
             border: 1px solid #ccc; /* Add a grey border */
-            background-color: #fff; /* Set the background color to white */
             font-size: 18px;
             margin-top: 10px;
             color: #333;
@@ -138,7 +175,7 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #007bff;
+            background-color: var(--buttonColor);
             color: #fff;
             border: none;
             border-radius: 50%;
@@ -150,39 +187,6 @@
             cursor: pointer;
             z-index: 9999;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        @media screen and (min-width: 768px) {
-            #chatbot-icon {
-                width: 60px;
-                height: 60px;
-            }
-        }
-
-        @media screen and (max-width: 768px) {
-            #chatbot-container {
-                width: 85%;
-                right: 0;
-                left: 0;
-                border-radius: 10px;
-            }
-
-            .user-input-container {
-                flex-direction: column; /* Stack input and button vertically */
-                align-items: center;
-            }
-
-            #user-input {
-                width: 100%; /* Make the input take full width */
-                margin-top: 10px;
-            }
-
-            #send-message-button {
-                width: 100%; /* Make the button take full width */
-                margin-top: 10px;
-                margin-left: 0; /* Remove margin-left to center the button */
-            }
-
         }
 
         .chatbot-opened {
@@ -271,26 +275,61 @@
             font-size: 14px;
             color: #777;
         }
+
+        #actions {
+            display: flex;
+            flex-direction: row;
+            margin-left: auto;
+        }
+
+        #actions > div {
+            margin-right: 20px;
+        }
+
+        #exit-button {
+            font-size: 28px;
+            color: var(--buttonColor);
+        }
+
+        #colored-bar {
+            height: 10px; /* Adjust the height as needed */
+            background-color: var(--buttonColor); /* Use the same color as your button color variable */
+        }
+
     </style>
 </head>
 
 <body>
-    <div id="chatbot-icon" onclick="toggleChat()">
+    <div id="chatbot-icon" onclick="openWindow()">
         <i class="fas fa-comment-dots" style="font-size: 24px;"></i>
     </div>
     <div id="chatbot-container">
-        <div id="top-container">
-            <p id="online-status">Tilgjengelig</p>
+        <div id="colored-bar"></div>
+        <div id="header">
+            <div id="top-container">
+                <div style="display: flex; flex-direction: row; align-items: center;">
+                    <p id="bot-name"></p>
+                    <div id="actions">
+                        <div id="exit-button" onclick="clearChat()">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div> 
+                        <div id="exit-button" onclick="closeWindow()">
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </div> 
+                    </div> 
+                </div>
+                <div id="availability-status">Tilgjengelig</div>
+            </div>
         </div>
-        <div id="chatbot-messages" style="display: none;">
+        
+        <div id="chatbot-messages">
         </div>
-        <div class="user-input-container">
+        <div id="quick-messages" class="customized-scrollbar"></div>
+        <div id="user-input-container">
             <input type="text" id="user-input" placeholder="Skriv meldingen din..." onkeypress="handleUserInput(event)" maxlength="250">
             <button id="send-message-button" class="quick-message-button" onclick="handleUserInput({ key: 'Enter' })">
                 <i class="fa-solid fa-envelope"></i>
             </button>
-        </div>
-        <div id="quick-messages" class="customized-scrollbar">
         </div>
         <div id="powered-by">
             Levert av <a href="https://www.alvahjelp.no" target="_blank">AlvaHjelp</a>
@@ -316,6 +355,19 @@
 
         setTimeout(initializeInteraction, interactionTimeout);
 
+        function clearChat() {
+            const chatbotMessages = document.getElementById('chatbot-messages');
+            const messages = Array.from(chatbotMessages.children);
+
+            if (messages.length > 2) {
+                // Remove all messages except the first two
+                for (let i = messages.length - 1; i > 1; i--) {
+                    chatbotMessages.removeChild(messages[i]);
+                }
+            }
+        }
+
+
         function disableBounce() {
             if (chatbotIcon.classList.contains('bounce')) {
                 chatbotIcon.classList.remove('bounce');
@@ -329,6 +381,16 @@
             }
         }
 
+        function openWindow() {
+            window.parent.postMessage('open-ah-window', '*');
+            toggleChat();
+        }
+
+        function closeWindow() {
+            toggleChat();
+            window.parent.postMessage('close-ah-window', '*');
+        }
+
         function toggleChat() {
             if (!chatEnabled) {
                 chatInteracted = true;
@@ -339,10 +401,10 @@
             chatbotVisible = !chatbotVisible;
             const chatbotContainer = document.getElementById('chatbot-container');
             if (chatbotVisible) {
-                chatbotContainer.style.display = 'block';
+                chatbotContainer.style.display = 'flex';
                 chatbotContainer.classList.remove('chatbot-closed');
                 chatbotContainer.classList.add('chatbot-opened');
-                userInput.style.display = chatEnabled ? 'block' : 'none';
+                userInput.style.display = chatEnabled ? 'flex' : 'none';
                 if (chatEnabled && chatbotVisible) {
                     userInput.focus();
                 }
@@ -358,8 +420,22 @@
         function addMessage(isUser, message) {
             const messageElement = document.createElement('div');
             messageElement.className = isUser ? 'user-message message' : 'chatbot-message message';
-            messageElement.textContent = message;
+
+            const textElement = document.createElement('div');
+            textElement.className = 'message-text';
+            textElement.textContent = message;
+
+            messageElement.appendChild(textElement);
+
+            const timestampElement = document.createElement('div');
+            timestampElement.className = 'message-timestamp';
+            const currentTime = new Date().toLocaleTimeString();
+            timestampElement.textContent = currentTime;
+            timestampElement.style.textAlign = isUser ? 'right' : 'left';
+            
+
             chatbotMessages.appendChild(messageElement);
+            chatbotMessages.appendChild(timestampElement);
             chatbotMessages.scrollTop = chatbotMessages.scrollHeight;
         }
 
@@ -424,9 +500,6 @@
 
         function startChat() {
             chatEnabled = true;
-            chatbotMessages.style.display = 'block';
-            userInput.style.display = 'block';
-            userInput.removeAttribute('disabled');
             userInput.focus();
 
             fetch(initEndpoint, {
@@ -443,11 +516,8 @@
                     quickMessages = data.quick_messages;
                     botName = data.bot_name;
 
-                    const chatbotNameElement = document.createElement('div');
-                    chatbotNameElement.innerHTML = `Du snakker med: ${botName} &#128075`;
-                    chatbotNameElement.style.fontSize = '20px';
-                    chatbotNameElement.style.fontWeight = 'bold';
-                    topContainer.insertBefore(chatbotNameElement, topContainer.firstChild);
+                    const chatbotNameElement = document.getElementById('bot-name');
+                    chatbotNameElement.innerHTML = `Bot ${botName} &#128075`;
 
                     addQuickMessageButtons(quickMessages);
 
